syntax = "proto3";

package api.v1;

option java_package = "com.topfreegames.maestro.pkg.api.v1";
option go_package = "github.com/topfreegames/maestro/pkg/api/v1";

import "google/api/annotations.proto";

// Service to query and manipulate schedulers.
service Schedulers {
  
  // Lists all schedulers.
  rpc ListSchedulers(EmptyRequest) returns (ListSchedulersReply) {
      option (google.api.http) = {
            get: "/schedulers"
      };
  }

  // Create a scheduler.
  rpc CreateScheduler(CreateSchedulerRequest) returns (Scheduler) {
      option (google.api.http) = {
            post: "/schedulers",
            body: "*"
      };
  }

  // List operations based on a scheduler.
  rpc ListOperations(ListOperationsRequest) returns (ListOperationsReply) {
      option (google.api.http) = {
            get: "/schedulers/{scheduler=*}/operations",
      };
  }
}

message EmptyRequest {}

// The list schedulers reply message.
message ListSchedulersReply {
  repeated Scheduler schedulers = 1;
}

// The scheduler DTO.
message Scheduler {
  string name = 1;
  string game = 2;
  string state = 3;
  string version = 4;
  PortRange port_range = 5;
}

// Scheduler is the struct that defines a maestro scheduler
message CreateSchedulerRequest {
  string name = 1;
  string game = 2;
  string version = 3;
}

// The scheduler port range DTO.
message PortRange {
  int32 start = 1;
	int32 end = 2;
}

message ListOperationsRequest {
  string scheduler = 1;
}

message ListOperationsReply {
  repeated Operation pending_operations = 1;
  repeated Operation active_operations = 2;
  repeated Operation finished_operations = 3;
}

message Operation {
  string iD = 1;
	string status = 2;
	string definition_name = 3;
	string scheduler_name = 4;
}